--- a/public/player.html
+++ b/public/player.html
@@ -78,6 +78,7 @@
                     <select id="deposit-duration" style="flex:1.2; margin:0; background: white;">
                         <option value="3">3個月 (0.125%)</option>
                         <option value="6">6個月 (0.125%)</option>
+                        <option value="9">9個月 (0.150%)</option>
                         <option value="12">12個月 (0.150%)</option>
                     </select>
                 </div>
